[package]
name = "reddish"
version = "0.2.0"
edition = "2021"
description = """
A Rust utility library
"""
authors = ["Rogério Araújo <rogerio.araujo@mail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rodgeraraujo/reddish"
documentation = "https://docs.rs/reddish"
homepage = "https://reddish.github.io"
include = ["Cargo.toml", "src/", "LICENSE", "README.md"]

[features]
default = ["array", "string", "object", "collection", "crypto", "random", "datetime"]
array = []
string = []
object = []
collection = []
crypto = []
random = []
datetime = []

[dependencies]
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"
percent-encoding = "2.3"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
