[package]
name = "reddish"
version = "0.2.0"
edition = "2021"
description = "A comprehensive Rust utility library, providing 55+ functions for string, array, object, crypto, random, and datetime operations."
authors = ["Rogério Araújo <rogerio.araujo@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["utility", "lodash", "ramda", "functional", "helpers"]
categories = ["algorithms", "data-structures", "development-tools", "encoding", "date-and-time"]
repository = "https://github.com/rodgeraraujo/reddish"
documentation = "https://docs.rs/reddish"
homepage = "https://github.com/rodgeraraujo/reddish"
include = ["Cargo.toml", "src/", "LICENSE", "README.md", "examples/"]
rust-version = "1.60"

[features]
default = ["array", "string", "object", "collection", "crypto", "random", "datetime"]
array = []
string = []
object = []
collection = []
crypto = []
random = []
datetime = []

[dependencies]
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"
percent-encoding = "2.3"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
